# ChangeLog for sys-apps/ed
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/ed/ChangeLog,v 1.62 2008/04/21 18:28:25 vapier Exp $

*ed-0.9 (21 Apr 2008)

  21 Apr 2008; Mike Frysinger <vapier@gentoo.org> +ed-0.9.ebuild:
  Version bump #218755.

  28 Sep 2007; nixnut <nixnut@gentoo.org> ed-0.8.ebuild:
  Stable on ppc wrt bug 194011

  28 Sep 2007; Jeroen Roovers <jer@gentoo.org> ed-0.8.ebuild:
  Stable for HPPA (bug #194011).

  28 Sep 2007; Raúl Porcel <armin76@gentoo.org> ed-0.8.ebuild:
  alpha/ia64/x86 stable wrt #194011

  28 Sep 2007; Ferris McCormick <fmccor@gentoo.org> ed-0.8.ebuild:
  Sparc stable --- Bug #194011 --- tests run successfully.

  28 Sep 2007; Christoph Mende <angelos@gentoo.org> ed-0.8.ebuild:
  Stable on amd64 wrt bug #194011

  28 Sep 2007; Joshua Kinard <kumba@gentoo.org> ed-0.8.ebuild:
  Stable on mips, per #194011.

  27 Sep 2007; Brent Baude <ranger@gentoo.org> ed-0.8.ebuild:
  marking ed-0.8 ppc64 for 194011

  20 Sep 2007; Brent Baude <ranger@gentoo.org> ed-0.6.ebuild:
  Marking ed-0.6 ppc64 stable for bug 189888.

  24 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> ed-0.6.ebuild:
  ppc stable, bug #189888

  24 Aug 2007; Raúl Porcel <armin76@gentoo.org> ed-0.6.ebuild:
  alpha/ia64 stable wrt #189888

  24 Aug 2007; <metalgod@gentoo.org> ed-0.6.ebuild:
  Stable on amd64. Bug #189888.

  23 Aug 2007; Jeroen Roovers <jer@gentoo.org> ed-0.6.ebuild:
  Stable for HPPA (bug #189888).

  23 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> ed-0.6.ebuild:
  Stable on sparc wrt #189888

  23 Aug 2007; Andrej Kacian <ticho@gentoo.org> ed-0.6.ebuild:
  Stable on x86, bug #189888.

  23 Aug 2007; Joshua Kinard <kumba@gentoo.org> ed-0.6.ebuild:
  Stable on mips, per #189888.

*ed-0.8 (22 Aug 2007)

  22 Aug 2007; Mike Frysinger <vapier@gentoo.org> +ed-0.8.ebuild:
  Version bump #189855 by Elias Pipping.

*ed-0.6 (10 Jul 2007)
