@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/ed
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/ed/ChangeLog,v 1.62 2008/04/21 18:28:25 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/ed/ChangeLog,v 1.63 2008/05/21 11:27:46 armin76 Exp $
+
+  21 May 2008; Raúl Porcel <armin76@gentoo.org> ed-0.9.ebuild:
+  alpha/ia64/sparc/x86 stable
 
 *ed-0.9 (21 Apr 2008)
 
